--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,17 @@
+annotated-types==0.7.0
+anyio==4.9.0
 bleach==6.2.0
-dataclass-wizard==0.27.0
-fastapi==0.115.5
-langchain-core==0.3.18
-langchain-nvidia-ai-endpoints==0.3.7
-langchain-openai==0.2.8
-langchain==0.3.7
-langchain-community==0.3.7
-pymilvus==2.5.4
-python-multipart==0.0.18
-unstructured[all-docs]==0.16.11
-uvicorn[standard]==0.32.0
-pydantic==2.9.2
-PyYAML==6.0.2
-langchain-milvus==0.1.8
-minio==7.2.15
-opentelemetry-api==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-instrumentation==0.50b0
-opentelemetry-exporter-otlp==1.29.0
-opentelemetry-exporter-prometheus==0.50b0
-opentelemetry-instrumentation-milvus==0.36.0
-opentelemetry-instrumentation-fastapi==0.50b0
-opentelemetry-processor-baggage==0.50b0
+certifi==2025.1.31
+fastapi==0.115.12
+idna==3.10
+pinecone==6.0.2
+pinecone-plugin-interface==0.0.7
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dateutil==2.9.0.post0
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.1
+typing_extensions==4.13.0
+urllib3==2.3.0
+webencodings==0.5.1
