--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,8 @@
-annotated-types==0.7.0
-anyio==4.9.0
-bleach==6.2.0
-certifi==2025.1.31
+bleach==6.1.0
 fastapi==0.115.12
-idna==3.10
+httpx==0.27.2
+nv-ingest-client==25.3.0
 pinecone==6.0.2
-pinecone-plugin-interface==0.0.7
-pydantic==2.10.6
-pydantic_core==2.27.2
-python-dateutil==2.9.0.post0
-six==1.17.0
-sniffio==1.3.1
-starlette==0.46.1
-typing_extensions==4.13.0
-urllib3==2.3.0
-webencodings==0.5.1
+python-dotenv==1.1.0
+python-multipart==0.0.20
+uvicorn==0.27.1
