--- a/deploy/compose/docker-compose.local.yaml
+++ b/deploy/compose/docker-compose.local.yaml
@@ -5,3 +5,17 @@ include:
 services:
   pinecone-cloud:
     profiles: ["never"]  # This ensures cloud is never started in local mode
+  minio:
+    image: minio/minio
+    ports:
+      - "9010:9010"
+      - "9011:9011"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server /data --console-address ":9011" --address ":9010"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9010/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
