--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 bleach==6.1.0
 fastapi==0.115.12
 httpx==0.27.2
+minio==7.2.15
 nv-ingest-client==25.3.0
+opentelemetry-api
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-exporter-otlp-proto-http
+opentelemetry-instrumentation
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-milvus
+opentelemetry-sdk
+pinecone-plugin-interface==0.0.7
 pinecone==6.0.2
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
+six==1.17.0
 uvicorn==0.27.1
-opentelemetry-api
-opentelemetry-sdk
-opentelemetry-instrumentation-fastapi
-opentelemetry-exporter-otlp-proto-http
-opentelemetry-exporter-otlp-proto-grpc
-opentelemetry-instrumentation-milvus
-opentelemetry-instrumentation
-minio==7.2.0
