feat: improve MinIO configuration and local development support
- Add Docker container detection to automatically switch MinIO endpoint
- Update MinIO operator initialization with better error handling
- Add helpful error messages for local development setup
- Simplify thumbnail ID generation and prefix handling
- Clean up code formatting and documentation

The main change adds support for automatically detecting whether the
application is running in Docker or locally, and configures the MinIO
endpoint accordingly. This makes local development easier while maintaining
compatibility with containerized deployments.

--- a/src/ingestor_server/Dockerfile
+++ b/src/ingestor_server/Dockerfile
@@ -8,7 +8,15 @@ ENV DEBIAN_FRONTEND noninteractive
 
 # Install required ubuntu packages for setting up python 3.10
 RUN apt update && \
-    apt install -y curl software-properties-common libgl1 libglib2.0-0 libmagic1 file && \
+    apt install -y \
+    g++ \
+    build-essential \
+    curl \
+    software-properties-common \
+    libgl1 \
+    libglib2.0-0 \
+    libmagic1 \
+    file && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt update && apt install -y python3.10 && \
     apt-get clean
@@ -57,8 +65,5 @@ ENV PYTHONPATH=/workspace:/workspace/src
 
 # Copy application code
 COPY ./ /workspace/
-
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
 
 ENTRYPOINT ["uvicorn", "src.ingestor_server.server:app"]
