--- a/deploy/compose/docker-compose-rag-server.yaml
+++ b/deploy/compose/docker-compose-rag-server.yaml
@@ -7,9 +7,9 @@ services:
     build:
       # Set context to repo's root directory
       context: ../../
-      dockerfile: src/Dockerfile
+      dockerfile: src/rag_server/Dockerfile
     # start the server on port 8081 with 8 workers for improved latency on concurrent requests.
-    command: ["python", "-m", "uvicorn", "src.server:app", "--port", "8081", "--host", "0.0.0.0", "--workers", "8"]
+    command: ["--port", "8081", "--host", "0.0.0.0", "--workers", "8"]
 
     # Common customizations to the pipeline can be controlled using env variables
     environment:
